more swagger docs
